Fix collapsed footer

--- a/components/styles.module.css
+++ b/components/styles.module.css
@@ -48,11 +48,7 @@
   max-width: 1100px;
   margin: auto auto 0;
   padding: 8px;
-
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
+  text-align: center;
 }
 
 .copyright {
